--- a/bolin-crm-main/bolin-crm-web/src/main/webapp/index/css/index.less
+++ b/bolin-crm-main/bolin-crm-web/src/main/webapp/index/css/index.less
@@ -47,7 +47,9 @@ body {
             a {
                 color: #fff;
                 font-size: 16px;
-                
+                display: block;
+                width: 100%;
+                height: 100%;
             }
 
             >div {
@@ -337,6 +339,9 @@ body {
             >a {
                 color: #fff;
                 font-size: 16px;
+                display: block;
+                width: 100%;
+                height: 100%;
             }
 
             >div {
