修改了css 添加了图片

--- a/bolin-crm-main/bolin-crm-web/src/main/webapp/index/css/index.less
+++ b/bolin-crm-main/bolin-crm-web/src/main/webapp/index/css/index.less
@@ -235,7 +235,8 @@ body {
 
 // 第一屏
 #section0 {
-    background: url(../img/p1.png) no-repeat 0 138px;
+    background: url(../img/p1.jpg) no-repeat 0 138px;
+    // background-size:100% 100%; 
 }
 
 .section {
@@ -784,7 +785,7 @@ body {
 
 //第五屏
 #section4 {
-    background: url(../img/p_time.png) no-repeat 50% 50%;
+    background: url(../img/p_time.jpg) no-repeat 50% 50%;
     background-size: 100% 100%;
     position: relative;
     height: 1153px;
@@ -966,7 +967,7 @@ body {
 
 //第七屏
 #section6 {
-    background: url(../img/500519162.png) no-repeat;
+    background: url(../img/500519162.jpg) no-repeat;
 	padding-top: 90px;
     height: 1523px;
 	text-align: center;
@@ -1389,7 +1390,7 @@ body {
 
 //第十二屏
 #section11 {
-    background: url(../img/bg13131.png) no-repeat;
+    background: url(../img/bg13131.jpg) no-repeat;
     background-size: 100% 100%;
 	position: relative;
     padding-top: 95px;
@@ -1531,7 +1532,7 @@ body {
 
 // 最后一屏
 #section13{
-	background: url(../img/p15.png)no-repeat;
+	background: url(../img/p15.jpg)no-repeat;
 	position: relative;
     padding-top: 78px;
     min-height: 534px;
