--- a/bolin-crm-main/bolin-crm-web/src/main/webapp/index/css/index.css
+++ b/bolin-crm-main/bolin-crm-web/src/main/webapp/index/css/index.css
@@ -290,7 +290,7 @@ body {
   background-color: #ff773b;
 }
 #section0 {
-  background: url(../img/p1.png) no-repeat 0 138px;
+  background: url(../img/p1.jpg) no-repeat 0 138px;
 }
 .section {
   position: relative;
@@ -744,7 +744,7 @@ body {
   font-size: 24px;
 }
 #section4 {
-  background: url(../img/p_time.png) no-repeat 50% 50%;
+  background: url(../img/p_time.jpg) no-repeat 50% 50%;
   background-size: 100% 100%;
   position: relative;
   height: 1153px;
@@ -901,7 +901,7 @@ body {
   margin-right: 0 !important;
 }
 #section6 {
-  background: url(../img/500519162.png) no-repeat;
+  background: url(../img/500519162.jpg) no-repeat;
   padding-top: 90px;
   height: 1523px;
   text-align: center;
@@ -1257,7 +1257,7 @@ body {
   transition: all 0.3s;
 }
 #section11 {
-  background: url(../img/bg13131.png) no-repeat;
+  background: url(../img/bg13131.jpg) no-repeat;
   background-size: 100% 100%;
   position: relative;
   padding-top: 95px;
@@ -1391,7 +1391,7 @@ body {
   margin-right: 0px;
 }
 #section13 {
-  background: url(../img/p15.png) no-repeat;
+  background: url(../img/p15.jpg) no-repeat;
   position: relative;
   padding-top: 78px;
   min-height: 534px;
